small fixes projects and overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -4,7 +4,7 @@ $fontColor: #fff;
 $fontShadowColor: #333;
 
 body{
-
+  overflow-x: hidden;
   background-color: $bgColor;
 }
 
